audit builder checkbox state issue WIP

--- a/app/src/main/res/layout/activity_cpd_profile.xml
+++ b/app/src/main/res/layout/activity_cpd_profile.xml
@@ -6,14 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".audit.cpdProfile">
 
-    <!--TODO: FIX THIS LAYOUT-->
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBarLayout2"
         android:layout_width="match_parent"
-
         android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:theme="@style/AppTheme.AppBarOverlay"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
