--- a/app/src/main/res/layout/content_edit_activity.xml
+++ b/app/src/main/res/layout/content_edit_activity.xml
@@ -63,6 +63,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
+                app:errorEnabled="true"
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="10dp"
                 android:hint="Hours">
@@ -80,6 +81,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
+                app:errorEnabled="true"
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="10dp"
                 android:hint="Minutes">
@@ -96,6 +98,7 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                app:errorEnabled="true"
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="10dp"
