--- a/app/src/main/res/layout/content_activity_details2.xml
+++ b/app/src/main/res/layout/content_activity_details2.xml
@@ -114,6 +114,7 @@
                 android:layout_marginStart="16dp"
                 android:textColor="@color/colorPrimaryDark"
                 android:layout_marginEnd="16dp"
+                android:textSize="16sp"
                 android:text="Activity Type:"
                 android:layout_marginBottom="10dp"
                 android:textStyle="bold"/>
