pie chart works with hours and mins!!

--- a/app/src/main/res/layout/content_activity_details2.xml
+++ b/app/src/main/res/layout/content_activity_details2.xml
@@ -7,15 +7,13 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_details2">
 
-    <!--TODO: LAYOUT COULD STILL BE IMPROVED-->
-
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <TextView
