--- a/app/src/main/res/layout/content_edit_activity.xml
+++ b/app/src/main/res/layout/content_edit_activity.xml
@@ -51,7 +51,7 @@
                     android:id="@+id/editActivityDate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="16dp"
+                    android:layout_marginStart="16dp"
                     android:textSize="16sp" />
 
             </LinearLayout>
