--- a/app/src/main/res/layout/activity_delete_account.xml
+++ b/app/src/main/res/layout/activity_delete_account.xml
@@ -29,7 +29,7 @@
         android:layout_height="wrap_content"
         android:textColor="@color/colorPrimaryDark"
         android:layout_margin="16dp"
-        android:textSize="16dp"
+        android:textSize="16sp"
         android:textStyle="bold"
         android:text="To delete your account, please re-enter your login details. Please note that your account cannot be recovered once deleted."
         app:layout_constraintBottom_toBottomOf="parent"
