--- a/app/src/main/res/layout/activity_standards.xml
+++ b/app/src/main/res/layout/activity_standards.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Standards">
+    tools:context=".activity.Standards">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBarLayout"
@@ -29,7 +29,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp">
@@ -65,7 +65,7 @@
                     android:id="@+id/standardOne"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="4dp"
+                    android:layout_marginStart="4dp"
                     android:layout_marginTop="4dp"
                     android:text="TextView"
                     android:textStyle="bold"
