--- a/app/src/main/res/layout/content_add_activity.xml
+++ b/app/src/main/res/layout/content_add_activity.xml
@@ -53,7 +53,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="16sp"
-                    android:layout_marginLeft="16dp"/>
+                    android:layout_marginStart="16dp"/>
 
             </LinearLayout>
 
