csv file path updated so no longer using legacy external storage method which is deprecated in apk29

--- a/app/src/main/res/layout/content_view_audit.xml
+++ b/app/src/main/res/layout/content_view_audit.xml
@@ -141,7 +141,7 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/auditViewList"
                 android:layout_width="match_parent"
-                android:layout_height="500dp"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
                 app:layout_constraintBottom_toTopOf="@+id/saveProfileBtn"
                 app:layout_constraintEnd_toEndOf="parent"
