--- a/app/src/main/res/layout/calendar_layout.xml
+++ b/app/src/main/res/layout/calendar_layout.xml
@@ -31,7 +31,7 @@
             android:layout_weight="3"
             android:gravity="center"
             android:text="CurrentDate"
-            android:textColor="@color/colorPrimaryDark"
+            android:textColor="@color/colorPrimary"
             android:textSize="18sp"
             android:textStyle="bold" />
 
@@ -57,7 +57,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="Sun"
-            android:textColor="@color/colorPrimaryDark"
+            android:textColor="@color/colorPrimary"
             android:background="@color/white"
             android:layout_marginTop="4dp"
             android:layout_weight="1"
@@ -68,7 +68,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="Mon"
-            android:textColor="@color/colorPrimaryDark"
+            android:textColor="@color/colorPrimary"
             android:background="@color/white"
             android:layout_marginTop="4dp"
             android:layout_weight="1"
@@ -79,7 +79,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="Tue"
-            android:textColor="@color/colorPrimaryDark"
+            android:textColor="@color/colorPrimary"
             android:background="@color/white"
             android:layout_marginTop="4dp"
             android:layout_weight="1"
@@ -90,7 +90,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="Wed"
-            android:textColor="@color/colorPrimaryDark"
+            android:textColor="@color/colorPrimary"
             android:background="@color/white"
             android:layout_marginTop="4dp"
             android:layout_weight="1"
@@ -101,7 +101,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="Thu"
-            android:textColor="@color/colorPrimaryDark"
+            android:textColor="@color/colorPrimary"
             android:background="@color/white"
             android:layout_marginTop="4dp"
             android:layout_weight="1"
@@ -112,7 +112,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="Fri"
-            android:textColor="@color/colorPrimaryDark"
+            android:textColor="@color/colorPrimary"
             android:background="@color/white"
             android:layout_marginTop="4dp"
             android:layout_weight="1"
@@ -123,7 +123,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="Sat"
-            android:textColor="@color/colorPrimaryDark"
+            android:textColor="@color/colorPrimary"
             android:background="@color/white"
             android:layout_marginTop="4dp"
             android:layout_weight="1"
