--- a/app/src/main/res/layout/show_events_rowlayout.xml
+++ b/app/src/main/res/layout/show_events_rowlayout.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -18,7 +17,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:textColor="@color/colorPrimaryDark"
+                android:textColor="@color/colorPrimary"
                 android:id="@+id/eventdate"
                 android:textStyle="bold"
                 android:text="Date"
@@ -42,7 +41,7 @@
                 android:gravity="center"
                 android:id="@+id/eventtime"
                 android:textStyle="bold"
-                android:textColor="@color/colorPrimaryDark"
+                android:textColor="@color/colorPrimary"
                 android:text="Time"
                 android:textSize="15sp"
                 />
