--- a/app/src/main/res/layout/activity_delete_account.xml
+++ b/app/src/main/res/layout/activity_delete_account.xml
@@ -27,7 +27,7 @@
         android:id="@+id/deleteAccountWarning"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/colorPrimary"
         android:layout_margin="16dp"
         android:textSize="16sp"
         android:textStyle="bold"
