--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,7 +12,7 @@
         android:layout_width="350dp"
         android:layout_height="80dp"
         android:layout_marginTop="100dp"
-        android:src="@mipmap/cpd_journal_main"
+        android:src="@mipmap/logo_white_background"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
