--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -18,7 +18,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.461"
-        app:srcCompat="@mipmap/cpd_journal_main" />
+        app:srcCompat="@mipmap/logo_white_background" />
 
     <ProgressBar
         android:id="@+id/progressBar2"
