--- a/app/src/main/res/layout/activity_standards.xml
+++ b/app/src/main/res/layout/activity_standards.xml
@@ -70,7 +70,7 @@
                     android:text="TextView"
                     android:textStyle="bold"
                     android:textSize="16sp"
-                    android:textColor="@color/colorPrimaryDark"
+                    android:textColor="@color/colorPrimary"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toEndOf="@+id/imgPlus"
@@ -103,7 +103,7 @@
                     android:layout_marginStart="4dp"
                     android:layout_marginTop="10dp"
                     android:textSize="16sp"
-                    android:textColor="@color/colorPrimaryDark"
+                    android:textColor="@color/colorPrimary"
                     android:text="TextView"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -137,7 +137,7 @@
                     android:layout_marginStart="4dp"
                     android:layout_marginTop="10dp"
                     android:textSize="16sp"
-                    android:textColor="@color/colorPrimaryDark"
+                    android:textColor="@color/colorPrimary"
                     android:text="TextView"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -173,7 +173,7 @@
                     android:textSize="16sp"
                     android:text="TextView"
                     android:textStyle="bold"
-                    android:textColor="@color/colorPrimaryDark"
+                    android:textColor="@color/colorPrimary"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@id/imgPlus4"
                     app:layout_constraintTop_toBottomOf="@id/threeExtra" />
@@ -205,7 +205,7 @@
                     android:layout_marginStart="4dp"
                     android:layout_marginTop="11dp"
                     android:textSize="16sp"
-                    android:textColor="@color/colorPrimaryDark"
+                    android:textColor="@color/colorPrimary"
                     android:text="TextView"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
