--- a/app/src/main/res/layout/content_activity_details2.xml
+++ b/app/src/main/res/layout/content_activity_details2.xml
@@ -20,7 +20,7 @@
                 android:id="@+id/activityNameHeader"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/colorPrimaryDark"
+                android:textColor="@color/colorPrimary"
                 android:layout_marginTop="20dp"
                 android:textSize="16sp"
                 android:layout_marginBottom="10dp"
@@ -43,7 +43,7 @@
                 android:id="@+id/activityDateHeader"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/colorPrimaryDark"
+                android:textColor="@color/colorPrimary"
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
                 android:textSize="16sp"
@@ -65,7 +65,7 @@
                 android:id="@+id/activityHoursHeader"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/colorPrimaryDark"
+                android:textColor="@color/colorPrimary"
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="10dp"
@@ -87,7 +87,7 @@
                 android:id="@+id/activityMinsHeader"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/colorPrimaryDark"
+                android:textColor="@color/colorPrimary"
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
                 android:textSize="16sp"
@@ -110,7 +110,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:textColor="@color/colorPrimaryDark"
+                android:textColor="@color/colorPrimary"
                 android:layout_marginEnd="16dp"
                 android:textSize="16sp"
                 android:text="Activity Type:"
@@ -131,7 +131,7 @@
                 android:id="@+id/activityDescirptionHeader"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/colorPrimaryDark"
+                android:textColor="@color/colorPrimary"
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
                 android:textSize="16sp"
@@ -153,7 +153,7 @@
                 android:id="@+id/activityDetailsRef1Header"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/colorPrimaryDark"
+                android:textColor="@color/colorPrimary"
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
                 android:textSize="16sp"
@@ -176,7 +176,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:textColor="@color/colorPrimaryDark"
+                android:textColor="@color/colorPrimary"
                 android:layout_marginEnd="16dp"
                 android:textSize="16sp"
                 android:layout_marginBottom="10dp"
@@ -200,7 +200,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginBottom="10dp"
                 android:textSize="16sp"
-                android:textColor="@color/colorPrimaryDark"
+                android:textColor="@color/colorPrimary"
                 android:layout_marginEnd="16dp"
                 android:text="What would you now do differently?"
                 android:textStyle="bold"/>
@@ -220,7 +220,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:textColor="@color/colorPrimaryDark"
+                android:textColor="@color/colorPrimary"
                 android:layout_marginEnd="16dp"
                 android:textSize="16sp"
                 android:layout_marginBottom="10dp"
