--- a/app/src/main/res/layout/content_edit_saved_audit_activities.xml
+++ b/app/src/main/res/layout/content_edit_saved_audit_activities.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -22,7 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:text="Please select all the examples of CPD evidence that you would like to include in your CPD profile. Those already ticked are already in your profile. Unticking these will remove them. "
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/colorPrimary"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@+id/toolbar" />
