--- a/app/src/main/res/layout/single_cell_layout.xml
+++ b/app/src/main/res/layout/single_cell_layout.xml
@@ -8,7 +8,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/calendar_day"
         android:text="1"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/colorPrimary"
         android:layout_gravity="center"
         android:textSize="16sp"/>
     <TextView
