--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#1E82C2</color>
-    <color name="colorPrimaryDark">#2F334F</color>
+    <color name="colorPrimary">#2F334F</color>
+    <color name="colorPrimaryDark">#1E82C2</color>
     <color name="colorAccent">#BA324F</color>
 
     <color name="pie_green">#2ecc71</color>
