--- a/app/src/main/res/layout/activity_delete_account.xml
+++ b/app/src/main/res/layout/activity_delete_account.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".account.EditAccount">
+    tools:context=".account.DeleteAccount">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBarLayout"
