--- a/app/src/main/res/layout/content_add_activity.xml
+++ b/app/src/main/res/layout/content_add_activity.xml
@@ -52,6 +52,7 @@
                     android:id="@+id/cpdDateResult"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:text="Please select date"
                     android:textSize="16sp"
                     android:layout_marginStart="16dp"/>
 
